Fix injection comment in QGridVirt2.razor

--- a/blazgrid/blazgrid.Client/Pages/QGridVirt2.razor
+++ b/blazgrid/blazgrid.Client/Pages/QGridVirt2.razor
@@ -1,6 +1,6 @@
 @page "/qgridVirt2"
 @rendermode InteractiveAuto
-@inject QDataService myBogusGridData
+@* @inject QDataService myBogusGridData *@
 @inject HttpClient Http
 @inject NavigationManager NavManager
 
